--- a/CriticalThinking/CriticalThinking.csproj
+++ b/CriticalThinking/CriticalThinking.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scenarios.cs" />
+    <Compile Include="WhileLoop.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
